W-13888827: Isolate service dependencies in their own module layer